# ChangeLog for dev-perl/Nagios-Plugin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Nagios-Plugin/ChangeLog,v 1.2 2009/03/08 19:03:47 tove Exp $

*Nagios-Plugin-0.32 (08 Mar 2009)

  08 Mar 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  +Nagios-Plugin-0.32.ebuild:
  Version bump. Add perl to metadata.

*Nagios-Plugin-0.31 (15 Feb 2009)

  15 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org> +metadata.xml,
  +Nagios-Plugin-0.31.ebuild:
  Initial Import, based on an ebuild by Christian Kauhaus (#257580)
