@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Net-Amazon
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon/ChangeLog,v 1.20 2009/05/06 15:56:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon/ChangeLog,v 1.21 2009/06/07 13:45:31 tove Exp $
+
+*Net-Amazon-0.51 (07 Jun 2009)
+
+  07 Jun 2009; Torsten Veller <tove@gentoo.org> +Net-Amazon-0.51.ebuild:
+  Version bump
 
   06 May 2009; Torsten Veller <tove@gentoo.org> -Net-Amazon-0.39.ebuild:
   Cleanup
