@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Nagios-Plugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Nagios-Plugin/ChangeLog,v 1.2 2009/03/08 19:03:47 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Nagios-Plugin/ChangeLog,v 1.3 2009/06/07 13:47:13 tove Exp $
+
+*Nagios-Plugin-0.33 (07 Jun 2009)
+
+  07 Jun 2009; Torsten Veller <tove@gentoo.org> +Nagios-Plugin-0.33.ebuild:
+  Version bump
 
 *Nagios-Plugin-0.32 (08 Mar 2009)
 
